--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
 discord.py==2.2.2
 google_search_results==2.4.1
-langchain==0.0.107
-openai==0.27.0
 Pillow==9.4.0
 pydot==1.4.2
 PyPDF2==3.0.1
@@ -11,3 +9,6 @@ requests==2.28.2
 transformers==4.26.1
 webuiapi==0.5.0
 google-api-python-client
+wolframalpha
+langchain
+openai
