--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,8 @@ requests==2.28.2
 transformers==4.26.1
 google-api-python-client
 wolframalpha
-langchain
-openai
+langchain==0.0.116
+openai==0.27.0
 tiktoken
 wikipedia
 graphviz
