--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ google_search_results==2.4.1
 pydot==1.4.2
 PyPDF2==3.0.1
 replicate==0.5.0
-requests==2.28.2
+requests
 transformers==4.26.1
 google-api-python-client
 wolframalpha
