--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ google_search_results==2.4.1
 pydot==1.4.2
 PyPDF2==3.0.1
 replicate==0.5.0
-requests
+requests==2.28.2
 transformers==4.26.1
 google-api-python-client
 wolframalpha
@@ -14,5 +14,3 @@ wikipedia
 graphviz
 psycopg2
 aioredis
-aiohttp
-googlesearch-python
