--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,8 @@ requests==2.28.2
 transformers==4.26.1
 google-api-python-client
 wolframalpha
-langchain==0.0.116
-openai==0.27.0
+langchain
+openai
 tiktoken
 wikipedia
 graphviz
