--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,9 @@
-discord.py==2.2.2
-google_search_results==2.4.1
-pydot==1.4.2
-PyPDF2==3.0.1
-replicate==0.5.0
-requests==2.28.2
-transformers==4.26.1
-google-api-python-client
+discord.py
+pydot
+PyPDF2
+replicate
+requests
+transformers
 wolframalpha
 langchain
 openai
