--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 discord.py
+google_search_results
 pydot
 PyPDF2
 replicate
 requests
 transformers
+google-api-python-client
 wolframalpha
 langchain
 openai
